infra/4.ingress-web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delivery-ingress
  namespace: delivery
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-svc
            port:
              number: 10000

      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: back-svc
            port:
              number: 10000
